# sbc-connect-common.alt

./: .gitignore  LICENSE  README.md
python/: README.md
python/gcp-queue/: README.md  pyproject.toml
python/gcp-queue/src/gcp_queue/: gcp_queue.py
python/gcp-queue/tests/integration/: test_gcp_queue_testcontainer.py  test_pubsub_container.py
python/structured-logging/: README.md  pyproject.toml
python/structured-logging/src/structured_logging/: __init__.py  logging.py
python/structured-logging/tests/unit/: test_structured_logging.py
