[tool.poetry]
name = "gcp_queue"
version = "0.2.0"
description = ""
authors = ["thorwolpert <thor@wolpert.ca>"]
readme = "README.md"
packages = [{include = "gcp_queue", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
google-auth = "^2.28.2"
google-cloud-pubsub = "^2.20.2"
simple-cloudevent = {git = "https://github.com/daxiom/simple-cloudevent.py.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.0.0"
requests-mock = "^1.11.0"
black = "^23.12.1"
zimports = "^0.6.1"
testcontainers = "^4.4.0"
google-cloud-datastore = "^2.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"