[tool.poetry]
name = "structured-logging"
version = "0.4.0"
description = ""
authors = ["thorwolpert <thor@wolpert.ca>"]
readme = "README.md"
packages = [{include = "structured_logging", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
structlog = "^24.1.0"
flask = ">= 1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[[tool.poetry.source]]
name = "sbc-connect"
url = "https://northamerica-northeast1-python.pkg.dev/c4hnrd-tools/python/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
